added async quora fetcher