@@ -2,48 +2,75 @@ package damnosol.triggeriq.sentiment.quora;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.Optional;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class QuoraArchiveFetcher {
 
     private static final String WAYBACK_API = "https://archive.org/wayback/available?url=%s";
     private static final String SAVE_PAGE_NOW = "https://web.archive.org/save/%s";
 
+    private static final ObjectMapper MAPPER = new ObjectMapper();
+
+    private final HttpClient httpClient = HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(10))
+            .followRedirects(HttpClient.Redirect.NORMAL)
+            .build();
+
+    /**
+     * Fetch an archived snapshot of a Quora URL if available,
+     * otherwise attempt to trigger Archive.org to save it.
+     */
     public Optional<String> fetchArchivedSnapshot(String quoraUrl) {
         try {
             log.info("Fetching archived snapshot for Quora URL: {}", quoraUrl);
 
             String encodedUrl = URLEncoder.encode(quoraUrl, StandardCharsets.UTF_8);
             String requestUrl = String.format(WAYBACK_API, encodedUrl);
-            log.debug("Wayback API request URL: {}", requestUrl);
 
-            HttpURLConnection connection = (HttpURLConnection) new URL(requestUrl).openConnection();
-            connection.setRequestMethod("GET");
-            int code = connection.getResponseCode();
-            log.info("Wayback API response code: {}", code);
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(requestUrl))
+                    .timeout(Duration.ofSeconds(15))
+                    .header("Accept", "application/json")
+                    .GET()
+                    .build();
 
-            ObjectMapper mapper = new ObjectMapper();
-            JsonNode root = mapper.readTree(connection.getInputStream());
+            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+            log.debug("Wayback API response code: {}, body length: {}",
+                    response.statusCode(), response.body().length());
 
-            JsonNode snapshot = root.path("archived_snapshots").path("closest").path("url");
-            if (!snapshot.isMissingNode()) {
-                return Optional.of(snapshot.asText());
+            if (response.statusCode() != 200) {
+                log.warn("Non-200 response from Wayback API for {}: {}", quoraUrl, response.statusCode());
+                return Optional.empty();
             }
 
-            log.warn("No archived snapshot found for URL: {} — triggering SavePageNow", quoraUrl);
+            JsonNode root = MAPPER.readTree(response.body());
+            JsonNode snapshotNode = root.path("archived_snapshots").path("closest").path("url");
+
+            if (!snapshotNode.isMissingNode()) {
+                String snapshotUrl = snapshotNode.asText();
+                log.info("Found archived snapshot for {}: {}", quoraUrl, snapshotUrl);
+                return Optional.of(snapshotUrl);
+            }
+
+            log.warn("No archived snapshot found for {} — triggering SavePageNow", quoraUrl);
             triggerSavePageNow(quoraUrl);
 
         } catch (Exception e) {
-            log.error("Error checking archive for URL: {}", quoraUrl, e);
+            log.error("Error fetching archive for {}: {}", quoraUrl, e.getMessage(), e);
         }
         return Optional.empty();
     }
@@ -51,13 +78,18 @@ public class QuoraArchiveFetcher {
     private void triggerSavePageNow(String url) {
         try {
             String saveUrl = String.format(SAVE_PAGE_NOW, url);
-            log.debug("SavePageNow request: {}", saveUrl);
 
-            HttpURLConnection connection = (HttpURLConnection) new URL(saveUrl).openConnection();
-            connection.setRequestMethod("GET");
-            log.info("SavePageNow response: {}", connection.getResponseCode());
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(saveUrl))
+                    .timeout(Duration.ofSeconds(20))
+                    .GET()
+                    .build();
+
+            HttpResponse<Void> response = httpClient.send(request, HttpResponse.BodyHandlers.discarding());
+            log.info("Triggered SavePageNow for {}, response code: {}", url, response.statusCode());
+
         } catch (Exception e) {
-            log.error("Error calling SavePageNow for {}", url, e);
+            log.error("Error calling SavePageNow for {}: {}", url, e.getMessage(), e);
         }
     }
 }
